# edas10

./: CMakeLists.txt
include/: cal_capacitor.h  cal_num_grid.h  costants.h  main.h  mesh_gen.h  min_space.h  net_pos2coords.h  parser.h  rect_pos2coords.h  solver.h  types.h
src/: cal_capacitor.c  cal_num_grid.c  main.c  mesh_gen.c  min_space.c  net_pos2coords.c  parser.c  rect_pos2coords.c  solver.c
